+ fix category api
