# openapi.json
@@ -221,6 +221,15 @@
               "default": 10,
               "type": "number"
             }
+          },
+          {
+            "name": "isDeleted",
+            "required": false,
+            "in": "query",
+            "description": "Показать удаленные товары",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
